[build-system]
requires = ["setuptools>=59.6"]
build-backend = "setuptools.build_meta"

[project]
name = "dc_test_exec"
version = "1.0.0"
authors = [
  { name="Osvaldo Pina", email="osvaldo.pina@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/osvaldopina/docker-compose-test-executor"
"Bug Tracker" = "https://github.com/osvaldopina/docker-compose-test-executor/issues"